opam-version: "1.2"
name: "bs-devkit"
version: "1.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/bs_devkit"
doc: "https://vbmithr.github.io/bs_devkit/doc"
license: "ISC"
dev-repo: "https://github.com/vbmithr/bs_devkit.git"
bug-reports: "https://github.com/vbmithr/bs_devkit/issues"
tags: []
available: [ ocaml-version >= "4.03.0" ]
depends: [
  "dune" {build & >= "1.0"}
  "cstruct"
  "yojson"
  "async" {>= "114.35+03"}
]
depopts: []
build:[[ "dune" "build" "-p" name "-j" jobs ]]